--- a/Space Race.csproj
+++ b/Space Race.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +79,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\347575__djt4nn3r__thrusters_loopamplified.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\268553__cydon__bang_001.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\430058__manimato2__explosion.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
